33.GitLab/gitlab/gitlab-webservice-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: gitlab-issuer
    kubernetes.io/ingress.class: gitlab-nginx
    kubernetes.io/ingress.provider: nginx
    meta.helm.sh/release-name: gitlab
    meta.helm.sh/release-namespace: gitlab
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  creationTimestamp: "2020-11-01T19:08:45Z"
  generation: 1
  labels:
    app: webservice
    app.kubernetes.io/managed-by: Helm
    chart: webservice-4.5.1
    heritage: Helm
    release: gitlab
  name: gitlab-webservice
  namespace: gitlab
  resourceVersion: "8493625"
  selfLink: /apis/extensions/v1beta1/namespaces/gitlab/ingresses/gitlab-webservice
  uid: 5b47b51c-8dd2-4ca2-8577-93fd26fd328f
spec:
  rules:
  - host: gitlab.spkr.io
    http:
      paths:
      - backend:
          serviceName: gitlab-webservice
          servicePort: 8181
        path: /
      - backend:
          serviceName: gitlab-webservice
          servicePort: 8080
        path: /admin/sidekiq
  tls:
  - hosts:
    - gitlab.spkr.io
    secretName: gitlab-gitlab-tls
status:
  loadBalancer: {}
